--- a/gui/core-gui.in
+++ b/gui/core-gui.in
@@ -54,7 +54,7 @@ case $1 in
     exit 0
     ;; 
 -v | --version) 
-    exec echo "`basename $0` version @CORE_VERSION@ (@CORE_VERSION_DATE@)"
+    exec echo "`basename $0` version @PACKAGE_VERSION@ (@PACKAGE_DATE@)"
     exit 0
     ;; 
 esac
@@ -63,7 +63,7 @@ SHELL=/bin/sh
 export SHELL
 
 export LIBDIR="@CORE_LIB_DIR@"
-export SBINDIR="@SBINDIR@"
+export SBINDIR="@sbindir@"
 # eval is used here to expand "~" to user's home dir
 if [ x$CONFDIR = x ]; then export CONFDIR=`eval "echo @CORE_GUI_CONF_DIR@"` ; fi
 export CORE_STATE_DIR="@CORE_STATE_DIR@"
