--- a/ns3/Makefile.am
+++ b/ns3/Makefile.am
@@ -7,17 +7,12 @@
 # Makefile for building corens3 components.
 #
 
-SETUPPY		= setup.py
-SETUPPYFLAGS	= -v
+SETUPPY	= setup.py
+SETUPPYFLAGS = -v
 
-EXAMPLE_FILES	=				\
-	examples/ns3lte.py			\
-	examples/ns3wifi.py			\
-	examples/ns3wifirandomwalk.py		\
-	examples/ns3wimax.py
-
-coreexampledir		= $(datadir)/core/examples/corens3
-dist_coreexample_SCRIPTS= $(EXAMPLE_FILES)
+#EXAMPLE_FILES := $(wildcard examples/*)
+#coreexampledir = $(datadir)/core/examples/corens3
+#dist_coreexample_SCRIPTS = $(EXAMPLE_FILES)
 
 # Python package build
 noinst_SCRIPTS = build
@@ -26,34 +21,30 @@ build:
 
 # Python package install
 install-exec-hook:
-	$(MKDIR_P) ${DESTDIR}/${pythondir}
-	$(MKDIR_P) ${DESTDIR}/${pyexecdir}
-	PYTHONPATH=${DESTDIR}/${pythondir} $(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) install \
-		--prefix=${DESTDIR}/${pyprefix} \
-		--install-purelib=${DESTDIR}/${pythondir} \
-		--install-platlib=${DESTDIR}/${pyexecdir} \
+	$(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) install \
+		--root=/$(DESTDIR) \
+		--prefix=$(prefix) \
+		--install-lib=$(pythondir) \
+		--single-version-externally-managed \
 		--no-compile
 
 # Python package uninstall
 uninstall-hook:
-	rm -f ${pythondir}/corens3_python-${COREDPY_VERSION}-py${PYTHON_VERSION}.egg-info
-	rm -rf ${pythondir}/corens3
-	rmdir -p $(coreexampledir) || true
+	rm -rf core_ns3.egg-info
+	rm -rf $(DESTDIR)/$(pythondir)/core_ns3-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
+	rm -rf $(DESTDIR)/$(pythondir)/corens3
+	rm -rf $(DESTDIR)/$(datadir)/corens3
 
 # Python package cleanup
 clean-local:
 	-rm -rf build
 
-# Python RPM package
-rpm:
-	$(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) bdist_rpm
-
 # because we include entire directories with EXTRA_DIST, we need to clean up
 # the source control files
 dist-hook:
-	rm -rf `find $(distdir)/ -name .svn` `find $(distdir)/ -name '*.pyc'`
+	rm -rf `find $(distdir)/ -name '*.pyc'`
 
-DISTCLEANFILES	= Makefile.in *.pyc corens3/*.pyc MANIFEST
+DISTCLEANFILES = Makefile.in *.pyc corens3/*.pyc MANIFEST
 
 # files to include with distribution tarball
-EXTRA_DIST	= LICENSE $(SETUPPY) corens3
+EXTRA_DIST = LICENSE $(SETUPPY) corens3
