--- a/ns3/Makefile.am
+++ b/ns3/Makefile.am
@@ -10,10 +10,6 @@
 SETUPPY	= setup.py
 SETUPPYFLAGS = -v
 
-#EXAMPLE_FILES := $(wildcard examples/*)
-#coreexampledir = $(datadir)/core/examples/corens3
-#dist_coreexample_SCRIPTS = $(EXAMPLE_FILES)
-
 # Python package build
 noinst_SCRIPTS = build
 build:
@@ -30,10 +26,10 @@ install-exec-hook:
 
 # Python package uninstall
 uninstall-hook:
-	rm -rf core_ns3.egg-info
-	rm -rf $(DESTDIR)/$(pythondir)/core_ns3-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
-	rm -rf $(DESTDIR)/$(pythondir)/corens3
-	rm -rf $(DESTDIR)/$(datadir)/corens3
+	-rm -rf core_ns3.egg-info
+	-rm -rf $(DESTDIR)/$(pythondir)/core_ns3-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
+	-rm -rf $(DESTDIR)/$(pythondir)/corens3
+	-rm -rf $(DESTDIR)/$(datadir)/corens3
 
 # Python package cleanup
 clean-local:
@@ -42,9 +38,12 @@ clean-local:
 # because we include entire directories with EXTRA_DIST, we need to clean up
 # the source control files
 dist-hook:
-	rm -rf `find $(distdir)/ -name '*.pyc'`
+	-rm -rf `find $(distdir)/ -name '*.pyc'`
 
-DISTCLEANFILES = Makefile.in *.pyc corens3/*.pyc MANIFEST
+distclean-local:
+	-rm -rf core_ns3.egg-info
+
+DISTCLEANFILES = Makefile.in 
 
 # files to include with distribution tarball
-EXTRA_DIST = LICENSE $(SETUPPY) corens3
+EXTRA_DIST = LICENSE $(SETUPPY) corens3 examples
