--- a/daemon/doc/Makefile.am
+++ b/daemon/doc/Makefile.am
@@ -23,7 +23,7 @@ index.rst:
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    =
+SPHINXOPTS    = -q
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = _build
