fixed issue with bad pathing for quagga run state dir

--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -11,7 +11,7 @@ SYSCTL_BIN = "@sysctl_path@/sysctl"
 IP_BIN = "@ip_path@/ip"
 TC_BIN = "@tc_path@/tc"
 EBTABLES_BIN = "@ebtables_path@/ebtables"
-QUAGGA_STATE_DIR = "@CORE_STATE_DIR@/run/quagga"
+QUAGGA_STATE_DIR = "/var/run/quagga"
 MOUNT_BIN = "@mount_path@/mount"
 UMOUNT_BIN = "@umount_path@/umount"
 OVS_BIN = "@ovs_vs_path@/ovs-vsctl"
