--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -1,18 +1,27 @@
+import os
+
 COREDPY_VERSION	= "@PACKAGE_VERSION@"
 CORE_STATE_DIR = "@CORE_STATE_DIR@"
 CORE_CONF_DIR = "@CORE_CONF_DIR@"
 CORE_DATA_DIR = "@CORE_DATA_DIR@"
-CORE_LIB_DIR = "@CORE_LIB_DIR@"
-
-VNODED_BIN = "@bindir@/vnoded"
-VCMD_BIN = "@bindir@/vcmd"
-BRCTL_BIN = "@brctl_path@/brctl"
-SYSCTL_BIN = "@sysctl_path@/sysctl"
-IP_BIN = "@ip_path@/ip"
-TC_BIN = "@tc_path@/tc"
-EBTABLES_BIN = "@ebtables_path@/ebtables"
 QUAGGA_STATE_DIR = "@CORE_STATE_DIR@/run/quagga"
-MOUNT_BIN = "@mount_path@/mount"
-UMOUNT_BIN = "@umount_path@/umount"
-OVS_BIN = "@ovs_vs_path@/ovs-vsctl"
-OVS_FLOW_BIN = "@ovs_of_path@/ovs-ofctl"
+
+
+def which(command):
+    for path in os.environ["PATH"].split(os.pathsep):
+	command_path = os.path.join(path, command)
+	if os.path.isfile(command_path) and os.access(command_path, os.X_OK):
+	    return command_path
+
+
+VNODED_BIN = which("vnoded")
+VCMD_BIN = which("vcmd")
+BRCTL_BIN = which("brctl")
+SYSCTL_BIN = which("sysctl")
+IP_BIN = which("ip")
+TC_BIN = which("tc")
+EBTABLES_BIN = which("ebtables")
+MOUNT_BIN = which("mount")
+UMOUNT_BIN = which("umount")
+OVS_BIN = which("ovs-vsctl")
+OVS_FLOW_BIN = which("ovs-ofctl")
