--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -9,34 +9,21 @@
 
 CLEANFILES	= core-daemon
 
-DISTCLEANFILES	= Makefile.in core-daemon.service
+DISTCLEANFILES	= Makefile.in core-daemon.service core-daemon
 
-EXTRA_DIST	= core-daemon-init.d \
-		  core-daemon.service.in \
-		  core-daemon-rc.d \
-		  core-daemon-init.d-SUSE
+EXTRA_DIST	= core-daemon.in core-daemon.service.in
 
 SUBDIRS		= perf
 
 # install startup scripts based on --with-startup=option configure option
-# init.d (default), systemd, SUSE
+# init.d (default), systemd
 if WANT_INITD
 startupdir	= /etc/init.d
 startup_SCRIPTS	= core-daemon
-
-core-daemon: core-daemon-init.d
-	cp $< $@
 endif
 if WANT_SYSTEMD
 startupdir	= /etc/systemd/system
 startup_SCRIPTS	= core-daemon.service
-endif
-if WANT_SUSE
-startupdir	= /etc/init.d
-startup_SCRIPTS	= core-daemon
-
-core-daemon: core-daemon-init.d-SUSE
-	cp $< $@
 endif
 
 # remove extra scripts and their directories if they are empty
