fixed default example config for custom emane models

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -51,7 +51,7 @@ emane_platform_port = 8101
 emane_transform_port = 8201
 emane_event_generate = True
 emane_event_monitor = False
-#emane_models_dir = /home/username/.core/emane
+#emane_models_dir = /home/username/.core/myemane
 # EMANE log level range [0,4] default: 2
 #emane_log_level = 2
 emane_realtime = True
