Add docker binary to constants.

--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -25,3 +25,4 @@ MOUNT_BIN = which("mount")
 UMOUNT_BIN = which("umount")
 OVS_BIN = which("ovs-vsctl")
 OVS_FLOW_BIN = which("ovs-ofctl")
+DOCKER_BIN = which("docker")
