updated versioning to 5.2

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 # branch name for the sonar analysis
-sonar.branch.name=5.1_shell_cleanup
+sonar.branch.name=rel/5.2
 sonar.branch.target=master
 
 # required metadata
 sonar.projectKey=CORE
 sonar.projectName=CORE
-sonar.projectVersion=5.1
+sonar.projectVersion=5.2
 
 # define modules
 sonar.modules=daemon,ns3,netns
