--- a/corefx/src/main/resources/config.json
+++ b/corefx/src/main/resources/config.json
@@ -1,5 +1,6 @@
 {
-  "coreRest": "http://127.0.0.1:5000",
+  "coreAddress": "127.0.0.1",
+  "corePort": 5000,
   "xmlPath": null,
   "mobilityPath": null,
   "shellCommand": "gnome-terminal --window --"
