--- a/daemon/setup.py.in
+++ b/daemon/setup.py.in
@@ -39,7 +39,7 @@ data_files.extend(recursive_files(_EXAMPLES_DIR, "examples"))
 
 setup(
     name="core",
-    version="5.2",
+    version="@PACKAGE_VERSION@",
     packages=find_packages(),
     install_requires=[
         "enum34",
