updated makefiles to build/clean protobuf files

--- a/configure.ac
+++ b/configure.ac
@@ -240,6 +240,7 @@ AC_CONFIG_FILES([Makefile
 		daemon/Makefile
 		daemon/doc/Makefile
 		daemon/doc/conf.py
+		daemon/proto/Makefile
 		netns/Makefile
 		netns/version.h
 		ns3/Makefile],)
