--- a/netns/setup.py.in
+++ b/netns/setup.py.in
@@ -36,7 +36,7 @@ setup(
         netns,
         vcmd
     ],
-    url="http://www.nrl.navy.mil/itd/ncs/products/core",
+    url="https://github.com/coreemu/core",
     author="Boeing Research & Technology",
     author_email="core-dev@nrl.navy.mil",
     license="BSD",
