--- a/daemon/requirements.txt
+++ b/daemon/requirements.txt
@@ -1,7 +1,5 @@
 enum34==1.1.6
+futures==3.2.0
+grpcio==1.18.0
 lxml==3.5.0
-mock==1.3.0
-pycco==0.5.1
-pytest==3.0.7
-pytest-cov==2.5.1
-pytest-runner==2.11.1
+six==1.12.0
