Add FRR STATE DIR constant to FRR daemon

--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -5,6 +5,7 @@ CORE_STATE_DIR = "@CORE_STATE_DIR@"
 CORE_CONF_DIR = "@CORE_CONF_DIR@"
 CORE_DATA_DIR = "@CORE_DATA_DIR@"
 QUAGGA_STATE_DIR = "@CORE_STATE_DIR@/run/quagga"
+FRR_STATE_DIR = "@CORE_STATE_DIR@/run/frr"
 
 
 def which(command):
