--- a/daemon/setup.py.in
+++ b/daemon/setup.py.in
@@ -43,6 +43,7 @@ setup(
     packages=find_packages(),
     install_requires=[
         "enum34",
+        "future",
         "lxml"
     ],
     tests_require=[
