make netns install programs to bin, since c extension is no longer used, added hack to endforce dist-packages

--- a/configure.ac
+++ b/configure.ac
@@ -110,6 +110,8 @@ if test "x$enable_daemon" = "xyes"; then
   AC_CHECK_FUNCS([atexit dup2 gettimeofday memset socket strerror uname])
 
   AM_PATH_PYTHON(2.7)
+  pythondir=`echo ${pythondir} | sed s,site-packages,dist-packages,`
+  AC_SUBST(pythondir,$pythondir)
 
   AC_CHECK_PROG(brctl_path, brctl, $as_dir, no, $SEARCHPATH)
   if test "x$brctl_path" = "xno" ; then
