updated requirements.txt to latest tested 2/3 environment and updated setup.py to reflect current dependencies

--- a/daemon/setup.py.in
+++ b/daemon/setup.py.in
@@ -42,9 +42,10 @@ setup(
     version="@PACKAGE_VERSION@",
     packages=find_packages(),
     install_requires=[
-        "enum34",
         "configparser",
+        "enum34",
         "future",
+        "grpcio",
         "lxml"
     ],
     tests_require=[
