--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -11,7 +11,13 @@ SETUPPY	= setup.py
 SETUPPYFLAGS = -v
 
 if WANT_DOCS
-  DOCS = doc
+DOCS = doc
+endif
+
+if PYTHON3
+PYTHONLIBDIR=$(libdir)/python3/dist-packages
+else
+PYTHONLIBDIR=$(pythondir)
 endif
 
 SUBDIRS = proto $(DOCS)
@@ -29,7 +35,7 @@ install-exec-hook:
 	$(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) install \
 		--root=/$(DESTDIR) \
 		--prefix=$(prefix) \
-		--install-lib=$(pythondir) \
+		--install-lib=$(PYTHONLIBDIR) \
 		--single-version-externally-managed
 
 # Python package uninstall
@@ -38,8 +44,8 @@ uninstall-hook:
 	rm -rf $(DESTDIR)/$(datadir)/core
 	rm -f $(addprefix $(DESTDIR)/$(datarootdir)/man/man1/, $(MAN_FILES))
 	rm -f $(addprefix $(DESTDIR)/$(bindir)/,$(SCRIPT_FILES))
-	rm -rf $(DESTDIR)/$(pythondir)/core-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
-	rm -rf $(DESTDIR)/$(pythondir)/core
+	rm -rf $(DESTDIR)/$(PYTHONLIBDIR)/core-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
+	rm -rf $(DESTDIR)/$(PYTHONLIBDIR)/core
 
 # Python package cleanup
 clean-local:
