--- a/ns3/Makefile.am
+++ b/ns3/Makefile.am
@@ -9,6 +9,12 @@
 
 if WANT_PYTHON
 
+if PYTHON3
+PYTHONLIBDIR=$(libdir)/python3/dist-packages
+else
+PYTHONLIBDIR=$(pythondir)
+endif
+
 SETUPPY	= setup.py
 SETUPPYFLAGS = -v
 
@@ -22,15 +28,15 @@ install-exec-hook:
 	$(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) install \
 		--root=/$(DESTDIR) \
 		--prefix=$(prefix) \
-		--install-lib=$(pythondir) \
+		--install-lib=$(PYTHONLIBDIR) \
 		--single-version-externally-managed \
 		--no-compile
 
 # Python package uninstall
 uninstall-hook:
 	-rm -rf core_ns3.egg-info
-	-rm -rf $(DESTDIR)/$(pythondir)/core_ns3-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
-	-rm -rf $(DESTDIR)/$(pythondir)/corens3
+	-rm -rf $(DESTDIR)/$(PYTHONLIBDIR)/core_ns3-$(PACKAGE_VERSION)-py$(PYTHON_VERSION).egg-info
+	-rm -rf $(DESTDIR)/$(PYTHONLIBDIR)/corens3
 	-rm -rf $(DESTDIR)/$(datadir)/corens3
 
 # Python package cleanup
