small tweak to building python2/3 and install.md documentation

--- a/configure.ac
+++ b/configure.ac
@@ -110,7 +110,7 @@ if test "x$enable_daemon" = "xyes"; then
   AC_CHECK_FUNCS([atexit dup2 gettimeofday memset socket strerror uname])
 
   AM_PATH_PYTHON(2.7)
-  AM_CONDITIONAL([PYTHON3], [test "$PYTHON" == "python3"])
+  AM_CONDITIONAL([PYTHON3], [test "x$PYTHON" == "xpython3"])
 
   AC_CHECK_PROG(brctl_path, brctl, $as_dir, no, $SEARCHPATH)
   if test "x$brctl_path" = "xno" ; then
@@ -266,7 +266,6 @@ Daemon:
   Daemon path:                ${bindir}
   Daemon config:              ${CORE_CONF_DIR}
   Python:                     ${PYTHON}
-  Python modules:             ${pythondir}
   Logs:                       ${CORE_STATE_DIR}/log
 
 Startup:                      ${with_startup}
