--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -20,6 +20,7 @@ VCMD_BIN = which("vcmd")
 BRCTL_BIN = which("brctl")
 SYSCTL_BIN = which("sysctl")
 IP_BIN = which("ip")
+ETHTOOL_BIN = which("ethtool")
 TC_BIN = which("tc")
 EBTABLES_BIN = which("ebtables")
 MOUNT_BIN = which("mount")
