added flake8/black, pre-commit integration for flake8/black, and black formatting changes

--- a/daemon/Pipfile
+++ b/daemon/Pipfile
@@ -11,6 +11,8 @@ grpcio-tools = "*"
 core = {editable = true,path = "."}
 isort = "*"
 pre-commit = "*"
+flake8 = "*"
+black = "==19.3b0"
 
 [packages]
 configparser = "*"
