--- a/daemon/setup.cfg
+++ b/daemon/setup.cfg
@@ -2,9 +2,16 @@
 test=pytest
 
 [isort]
-skip_glob=*_pb2*.py
+skip_glob=*_pb2*.py,utm.py,doc,build
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
 use_parentheses=True
 line_length=100
+
+[flake8]
+ignore=E501
+max-line-length=100
+max-complexity=18
+select=B,C,E,F,W,T4
+exclude=*_pb2*.py,utm.py,doc,build
