--- a/daemon/Pipfile
+++ b/daemon/Pipfile
@@ -18,7 +18,7 @@ mock = "*"
 
 [packages]
 configparser = "*"
-enum34 = "*"
+enum34 = {markers = "python_version < '3.4'"}
 future = "*"
 futures = {markers = "python_version < '3.2'"}
 grpcio = "*"
